--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@ body {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  margin-top: 20px;
 }
 
 .signup-btn:hover {
@@ -142,6 +143,7 @@ input {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  margin-top: 20px;
 }
 
 .login-btn:hover {
@@ -201,3 +203,23 @@ code {
 ::-webkit-scrollbar-thumb:hover {
   background-color: #555; /* Hover color */
 }
+
+.error-message {
+  color: red;
+  margin-bottom: 10px;
+}
+
+.success-message {
+  color: green;
+  margin-bottom: 10px;
+}
+
+.field-error {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  display: block;
+}
+
+
