--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -195,3 +195,34 @@
   border-radius: 10px;
   margin-bottom: 10px;
 }
+
+.footer-button {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+  padding: 5px 10px;
+  position: relative;
+  transition: color 0.3s ease-in-out;
+}
+
+.footer-button:hover {
+  color: #ddd; /* Slightly dim the text on hover */
+}
+
+.footer-button::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -3px;
+  width: 0;
+  height: 2px;
+  background-color: white;
+  transition: width 0.3s ease-in-out, left 0.3s ease-in-out;
+}
+
+.footer-button:hover::after {
+  width: 100%;
+  left: 0;
+}
