--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -226,3 +226,22 @@
   width: 100%;
   left: 0;
 }
+
+.profile-btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  margin-left: 20px;
+}
+
+.profile-btn img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transition: transform 0.3s ease;
+}
+
+.profile-btn:hover img {
+  transform: scale(1.1);
+}
