--- a/src/pages/ExploreSalads/ExploreSalads.css
+++ b/src/pages/ExploreSalads/ExploreSalads.css
@@ -186,3 +186,17 @@ h2 {
   border-radius: 5px;
   text-align: center;
 }
+
+.remove-from-cart-btn {
+  background-color: #ff4444;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.remove-from-cart-btn:hover {
+  background-color: #cc0000;
+}
